--- a/app/views/static_pages/fb2.html.erb
+++ b/app/views/static_pages/fb2.html.erb
@@ -1,14 +1,13 @@
-<% 1000.times do |number| %>
-  <% number = number + 1 %>
-  <% if number%3 == 0 %>
-    <%= image_tag "person.png" %>
-    <br>
-  <% elsif number%5 == 0 %>
-    <%= image_tag "puppy.png" %>
-    <br>
-  <% else %>
-    <h3>
-      <%= number %>
-    </h3>
+<div id="results">
+  <% if !@lines.nil? %>
+    <% @lines.each do |line| %>
+    <div> 
+      <% if line.kind_of? Integer %>
+        <%= line %>
+      <% else %>
+        <%= image_tag line %>
+      <% end %>
+    </div>
+    <% end %>
   <% end %>
-<% end %>
+</div>
